--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "circle-github-bot": "^2.0.1",
+    "ramda": "^0.26.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
@@ -35,10 +36,10 @@
   },
   "lighthouse": {
     "requiredScores": {
-      "performance": 95,
-      "accessibility": 90,
-      "best-practices": 80,
-      "seo": 90
+      "accessibility": 100,
+      "best-practices": 100,
+      "performance": 100,
+      "seo": 100
     }
   }
 }
